--- a/translation/it/giovannizappa/sutta/mn/mn19_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn19_translation-it-giovannizappa.json
@@ -99,5 +99,5 @@
   "mn19:25.1": "Immaginate che in una foresta ci sia una distesa di paludi,",
   "mn19:25.2": "ed un grande branco di cervi viva lì vicino.",
   "mn19:25.3": "Poi arriva una persona che vuole far loro del male, ferirli, e minacciarli.",
-  "mn19:25.4": "Blocca il percorso protetto e sicuro che porta alla felicità, ed apre il percorso sbagliato. Lì pianta cervi addomesticati maschi e femmine come esca"
+  "mn19:25.4": "Blocca il percorso protetto e sicuro che porta alla felicità, ed apre il percorso sbagliato. Lì mette cervi addomesticati maschi e femmine come esca"
 }
