--- a/translation/it/giovannizappa/sutta/mn/mn19_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn19_translation-it-giovannizappa.json
@@ -100,5 +100,6 @@
   "mn19:25.2": "ed un grande branco di cervi viva lì vicino.",
   "mn19:25.3": "Poi arriva una persona che vuole far loro del male, ferirli, e minacciarli.",
   "mn19:25.4": "Blocca il percorso protetto e sicuro che porta alla felicità, ed apre il percorso sbagliato. Lì mette cervi addomesticati maschi e femmine come esca",
-  "mn19:25.5": "cosicché, a tempo debito, quel branco di cervi cada in rovina e disastro."
+  "mn19:25.5": "cosicché, a tempo debito, quel branco di cervi cada in rovina e disastro.",
+  "mn19:25.6": "Poi arriva una persona che vuole aiutare a tenere il branco di cervi al sicuro."
 }
