--- a/translation/it/giovannizappa/sutta/mn/mn19_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn19_translation-it-giovannizappa.json
@@ -103,5 +103,6 @@
   "mn19:25.5": "cosicché, a tempo debito, quel branco di cervi cada in rovina e disastro.",
   "mn19:25.6": "Poi arriva una persona che vuole aiutare a tenere il branco di cervi al sicuro.",
   "mn19:25.7": "Apre il percorso protetto e sicuro che porta alla felicità, e chiude il percorso sbagliato. Si sbarazza delle esche",
-  "mn19:25.8": "cosicché, a tempo debito, quel branco di cervi cresca, aumenti, e maturi."
+  "mn19:25.8": "cosicché, a tempo debito, quel branco di cervi cresca, aumenti, e maturi.",
+  "mn19:26.1": "Ho inventato queste similitudine per illustrare un punto."
 }
