--- a/translation/it/giovannizappa/sutta/mn/mn19_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn19_translation-it-giovannizappa.json
@@ -105,5 +105,6 @@
   "mn19:25.7": "Apre il percorso protetto e sicuro che porta alla felicità, e chiude il percorso sbagliato. Si sbarazza delle esche",
   "mn19:25.8": "cosicché, a tempo debito, quel branco di cervi cresca, aumenti, e maturi.",
   "mn19:26.1": "Ho inventato queste similitudine per illustrare un punto.",
-  "mn19:26.2": "E questo è ciò che significa."
+  "mn19:26.2": "E questo è ciò che significa.",
+  "mn19:26.3": "‘Una distesa di paludi’ è termine per i piaceri dei sensi."
 }
