--- a/translation/it/giovannizappa/sutta/mn/mn19_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn19_translation-it-giovannizappa.json
@@ -106,5 +106,6 @@
   "mn19:25.8": "cosicché, a tempo debito, quel branco di cervi cresca, aumenti, e maturi.",
   "mn19:26.1": "Ho inventato queste similitudine per illustrare un punto.",
   "mn19:26.2": "E questo è ciò che significa.",
-  "mn19:26.3": "‘Una distesa di paludi’ è termine per i piaceri dei sensi."
+  "mn19:26.3": "‘Una distesa di paludi’ è termine per i piaceri dei sensi.",
+  "mn19:26.4": "‘Una grande branco di cervi’ è termine per gli esseri viventi."
 }
