--- a/translation/it/giovannizappa/sutta/mn/mn19_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn19_translation-it-giovannizappa.json
@@ -108,5 +108,5 @@
   "mn19:26.2": "E questo è ciò che significa.",
   "mn19:26.3": "‘Una distesa di paludi’ sta per i piaceri dei sensi.",
   "mn19:26.4": "‘Una grande branco di cervi’ sta per gli esseri viventi.",
-  "mn19:26.5": "‘Una persona che vuole far loro del male, ferirli, e minacciarli’ è termine per Māra il Malvagio."
+  "mn19:26.5": "‘Una persona che vuole far loro del male, ferirli, e minacciarli’ sta per Māra il Malvagio."
 }
