--- a/translation/it/giovannizappa/sutta/mn/mn19_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn19_translation-it-giovannizappa.json
@@ -109,5 +109,6 @@
   "mn19:26.3": "‘Una distesa di paludi’ sta per i piaceri dei sensi.",
   "mn19:26.4": "‘Una grande branco di cervi’ sta per gli esseri viventi.",
   "mn19:26.5": "‘Una persona che vuole far loro del male, ferirli, e minacciarli’ sta per Māra il Malvagio.",
-  "mn19:26.6": "‘Il percorso sbagliato’ sta per l'ottuplice percorso sbagliato, cioè,"
+  "mn19:26.6": "‘Il percorso sbagliato’ sta per l'ottuplice percorso sbagliato, cioè,",
+  "mn19:26.7": "opinione sbagliata, pensiero sbagliato, linguaggio sbagliato, azione sbagliata, sostentamento sbagliato, sforzo sbagliato, presenza mentale sbagliata, e raccoglimento mentale sbagliato."
 }
