--- a/translation/it/giovannizappa/sutta/mn/mn19_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn19_translation-it-giovannizappa.json
@@ -114,5 +114,6 @@
   "mn19:26.8": "‘Un cervo maschio addomesticato’ sta per l’avidità e il godimento.",
   "mn19:26.9": "‘Un cervo femmina addomesticato’ sta per l'ignoranza.",
   "mn19:26.10": "‘Una persona che vuole aiutare a tenere il branco di cervi al sicuro’ sta per il Realizzato, il perfetto, il Buddha completamente risvegliato.",
-  "mn19:26.11": "‘Il percorso protetto e sicuro che porta alla felicità’ sta per il nobile ottuplice percorso, cioé:"
+  "mn19:26.11": "‘Il percorso protetto e sicuro che porta alla felicità’ sta per il nobile ottuplice percorso, cioé:",
+  "mn19:26.12": "opinione corretta, pensiero corretto, linguaggio corretto, azione corretta, sostentamento corretto, sforzo corretto, presenza mentale corretta, raccoglimento mentale corretto."
 }
