--- a/translation/it/giovannizappa/sutta/mn/mn19_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn19_translation-it-giovannizappa.json
@@ -116,5 +116,6 @@
   "mn19:26.10": "‘Una persona che vuole aiutare a tenere il branco di cervi al sicuro’ sta per il Realizzato, il perfetto, il Buddha completamente risvegliato.",
   "mn19:26.11": "‘Il percorso protetto e sicuro che porta alla felicità’ sta per il nobile ottuplice percorso, cioé:",
   "mn19:26.12": "opinione corretta, pensiero corretto, linguaggio corretto, azione corretta, sostentamento corretto, sforzo corretto, presenza mentale corretta, raccoglimento mentale corretto.",
-  "mn19:26.13": "Quindi, mendicanti, ho aperto il percorso protetto e sicuro che porta alla felicità, e ho chiuso il percorso sbagliato. E mi sono sbarazzato delle esche maschi e femmine."
+  "mn19:26.13": "Quindi, mendicanti, ho aperto il percorso protetto e sicuro che porta alla felicità, e ho chiuso il percorso sbagliato. E mi sono sbarazzato delle esche maschi e femmine.",
+  "mn19:27.1": "Per compassione, ho fatto ciò che un maestro che vuole il meglio per i propri discepoli dovrebbe fare."
 }
