--- a/translation/it/giovannizappa/sutta/mn/mn19_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn19_translation-it-giovannizappa.json
@@ -118,5 +118,6 @@
   "mn19:26.12": "opinione corretta, pensiero corretto, linguaggio corretto, azione corretta, sostentamento corretto, sforzo corretto, presenza mentale corretta, raccoglimento mentale corretto.",
   "mn19:26.13": "Quindi, mendicanti, ho aperto il percorso protetto e sicuro che porta alla felicità, e ho chiuso il percorso sbagliato. E mi sono sbarazzato delle esche maschi e femmine.",
   "mn19:27.1": "Per compassione, ho fatto ciò che un maestro che vuole il meglio per i propri discepoli dovrebbe fare.",
-  "mn19:27.2": "Qui ci sono queste radici d'albero, qui ci sono queste capanne vuote. Meditate, mendicanti! Non siate negligenti! Non pentitevene più avanti! Queste sono le mie istruzioni.”"
+  "mn19:27.2": "Qui ci sono queste radici d'albero, qui ci sono queste capanne vuote. Meditate, mendicanti! Non siate negligenti! Non pentitevene più avanti! Queste sono le mie istruzioni.”",
+  "mn19:27.3": "Questo è ciò che il Buddha disse."
 }
