--- a/translation/it/giovannizappa/sutta/mn/mn20_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn20_translation-it-giovannizappa.json
@@ -3,6 +3,10 @@
   "mn20:0.2": "Calmare I Pensieri",
   "mn20:1.1": "Così ho sentito.",
   "mn20:1.2": "Una volta il Buddha si trovava vicino a Sāvatthī, nel bosco di Jeta, il monastero di Anāthapiṇḍika.",
+  "mn20:1.3": "Lì il Buddha si rivolse ai mendicanti:",
+  "mn20:1.4": "“Mendicanti!”",
+  "mn20:1.5": "“Venerabile Signore,” risposero i mendicanti.",
+  "mn20:1.6": "Il Buddha disse:",
   "mn20:2.1": "“Mendicanti, un mendicante dedito alla mente superiore deve dare attenzione a cinque caratteristiche di tanto in tanto.",
   "mn20:2.2": "Quali cinque?"
 }
