--- a/translation/it/giovannizappa/sutta/mn/mn20_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn20_translation-it-giovannizappa.json
@@ -9,5 +9,5 @@
   "mn20:1.6": "Il Buddha disse:",
   "mn20:2.1": "“Mendicanti, un mendicante dedito alla mente superiore deve dare attenzione a cinque caratteristiche di tanto in tanto.",
   "mn20:2.2": "Quali cinque?",
-  "mn20:3.1": "Prendete un mendicante che sta dando attenzione ad una caratteristica che da origine a pensieri cattivi e malsani legati a desiderio, odio, e illusione. Quel mendicante deve dare attenzione ad un altra caratteristica legata a ciò che è sano."
+  "mn20:3.1": "Prendete un mendicante che sta dando attenzione ad una caratteristica che da origine a pensieri cattivi e malsani legati a desiderio, odio, e illusione. Quel mendicante deve dare attenzione ad un’altra caratteristica legata a ciò che è sano."
 }
