--- a/translation/it/giovannizappa/sutta/mn/mn20_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn20_translation-it-giovannizappa.json
@@ -16,5 +16,6 @@
   "mn20:3.5": "Allo stesso modo, un mendicante … deve dare attenzione ad un’altra caratteristica legata a ciò che è sano …",
   "mn20:4.1": "Ora, prendete un mendicante che sta dando attenzione ad una caratteristica legata a ciò che è sano, ma pensieri cattivi e malsani legati a desiderio, odio, e illusione continuano a venire a galla. Deve esaminare gli svantaggi di quei pensieri:",
   "mn20:4.2": "‘Quindi questi pensieri sono malsani, sono biasimevoli, e risultano in sofferenza.’",
-  "mn20:4.3": "Nel fare ciò, quei pensieri cattivi vengono abbandonati e finiscono."
+  "mn20:4.3": "Nel fare ciò, quei pensieri cattivi vengono abbandonati e finiscono.",
+  "mn20:4.4": "La propria mente si calma internamente; si stabilisce, si unifica, e si raccoglie."
 }
