--- a/translation/it/giovannizappa/sutta/mn/mn20_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn20_translation-it-giovannizappa.json
@@ -18,5 +18,6 @@
   "mn20:4.2": "‘Quindi questi pensieri sono malsani, sono biasimevoli, e risultano in sofferenza.’",
   "mn20:4.3": "Nel fare ciò, quei pensieri cattivi vengono abbandonati e finiscono.",
   "mn20:4.4": "La propria mente si calma internamente; si stabilisce, si unifica, e si raccoglie.",
-  "mn20:4.5": "Immagina ci sia una donna o un uomo giovane, giovanile, e appassionato di ornamenti che si lava la testa. Se dal proprio collo penzolasse la carcassa di un serpente o di un cane o di un umano, sarebbe inorridito, nauseato, e disgustato."
+  "mn20:4.5": "Immagina ci sia una donna o un uomo giovane, giovanile, e appassionato di ornamenti che si lava la testa. Se dal proprio collo penzolasse la carcassa di un serpente o di un cane o di un umano, sarebbe inorridito, nauseato, e disgustato.",
+  "mn20:4.6": "Allo stesso modo, un mendicante … deve esaminare gli svantaggi in quei pensieri …"
 }
