--- a/translation/it/giovannizappa/sutta/mn/mn20_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn20_translation-it-giovannizappa.json
@@ -24,5 +24,6 @@
   "mn20:5.2": "Nel fare ciò, quei pensieri cattivi vengono abbandonati e finiscono.",
   "mn20:5.3": "La propria mente si calma internamente; si stabilisce, si unifica, e si raccoglie.",
   "mn20:5.4": "Immaginate una persona con buona vista, e alcune viste sgradite entrano nel proprio campo visivo.",
-  "mn20:5.5": "Chiuderebbe gli occhi o guarderebbe da un’altra parte."
+  "mn20:5.5": "Chiuderebbe gli occhi o guarderebbe da un’altra parte.",
+  "mn20:5.6": "Allo stesso modo, un mendicante … deve esaminare gli svantaggi in quei pensieri …"
 }
