--- a/translation/it/giovannizappa/sutta/mn/mn20_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn20_translation-it-giovannizappa.json
@@ -25,5 +25,5 @@
   "mn20:5.3": "La propria mente si calma internamente; si stabilisce, si unifica, e si raccoglie.",
   "mn20:5.4": "Immaginate una persona con buona vista, e alcune viste sgradite entrano nel proprio campo visivo.",
   "mn20:5.5": "Chiuderebbe gli occhi o guarderebbe da un’altra parte.",
-  "mn20:5.6": "Allo stesso modo, un mendicante … deve esaminare gli svantaggi in quei pensieri …"
+  "mn20:5.6": "Allo stesso modo, un mendicante … quei pensieri cattivi vengono abbandonati e finiscono …"
 }
