--- a/translation/it/giovannizappa/sutta/mn/mn20_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn20_translation-it-giovannizappa.json
@@ -27,5 +27,6 @@
   "mn20:5.5": "Chiuderebbe gli occhi o guarderebbe da un’altra parte.",
   "mn20:5.6": "Allo stesso modo, un mendicante … quei pensieri cattivi vengono abbandonati e finiscono …",
   "mn20:6.1": "Ora, prendete un mendicante che sta ignorando e dimenticando quei pensieri, ma pensieri cattivi e malsani legati a desiderio, odio, e illusione continuano a venire a galla. Deve concentrarsi a calmare la formazione di quei pensieri.",
-  "mn20:6.2": "Nel fare ciò, quei pensieri cattivi vengono abbandonati e finiscono."
+  "mn20:6.2": "Nel fare ciò, quei pensieri cattivi vengono abbandonati e finiscono.",
+  "mn20:6.3": "La propria mente si calma internamente; si stabilisce, si unifica, e si raccoglie."
 }
