--- a/translation/it/giovannizappa/sutta/mn/mn20_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn20_translation-it-giovannizappa.json
@@ -30,5 +30,6 @@
   "mn20:6.2": "Nel fare ciò, quei pensieri cattivi vengono abbandonati e finiscono.",
   "mn20:6.3": "La propria mente si calma internamente; si stabilisce, si unifica, e si raccoglie.",
   "mn20:6.4": "Immaginate ci sia una persona che cammina velocemente.",
-  "mn20:6.5": "Poi pensa:"
+  "mn20:6.5": "Poi pensa:",
+  "mn20:6.6": "‘Perché sto camminando così velocemente?"
 }
