--- a/translation/it/giovannizappa/sutta/mn/mn20_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn20_translation-it-giovannizappa.json
@@ -31,5 +31,6 @@
   "mn20:6.3": "La propria mente si calma internamente; si stabilisce, si unifica, e si raccoglie.",
   "mn20:6.4": "Immaginate ci sia una persona che cammina velocemente.",
   "mn20:6.5": "Poi pensa:",
-  "mn20:6.6": "‘Perché sto camminando così velocemente?"
+  "mn20:6.6": "‘Perché sto camminando così velocemente?",
+  "mn20:6.7": "Perché non rallento?’"
 }
