--- a/translation/it/giovannizappa/sutta/mn/mn20_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn20_translation-it-giovannizappa.json
@@ -32,5 +32,6 @@
   "mn20:6.4": "Immaginate ci sia una persona che cammina velocemente.",
   "mn20:6.5": "Poi pensa:",
   "mn20:6.6": "‘Perché sto camminando così velocemente?",
-  "mn20:6.7": "Perché non rallento?’"
+  "mn20:6.7": "Perché non rallento?’",
+  "mn20:6.8": "Allora rallenta."
 }
