--- a/translation/it/giovannizappa/sutta/mn/mn20_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn20_translation-it-giovannizappa.json
@@ -34,5 +34,6 @@
   "mn20:6.6": "‘Perché sto camminando così velocemente?",
   "mn20:6.7": "Perché non rallento?’",
   "mn20:6.8": "Allora rallenta.",
-  "mn20:6.9": "Poi pensa:"
+  "mn20:6.9": "Poi pensa:",
+  "mn20:6.10": "‘Perché sto camminando lentamente?"
 }
