--- a/translation/it/giovannizappa/sutta/mn/mn20_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn20_translation-it-giovannizappa.json
@@ -39,5 +39,6 @@
   "mn20:6.11": "Perché non rimango fermo in piedi?’",
   "mn20:6.12": "Allora rimane fermo in piedi.",
   "mn20:6.13": "Poi pensa:",
-  "mn20:6.14": "‘Perché sto rimanendo fermo in piedi?"
+  "mn20:6.14": "‘Perché sto rimanendo fermo in piedi?",
+  "mn20:6.15": "Perché non mi siedo?"
 }
