--- a/translation/it/giovannizappa/sutta/mn/mn20_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn20_translation-it-giovannizappa.json
@@ -42,5 +42,6 @@
   "mn20:6.14": "‘Perché sto rimanendo fermo in piedi?",
   "mn20:6.15": "Perché non mi siedo?’",
   "mn20:6.16": "Allora si siede.",
-  "mn20:6.17": "Poi pensa:"
+  "mn20:6.17": "Poi pensa:",
+  "mn20:6.18": "‘Perché sono seduto?"
 }
