--- a/translation/it/giovannizappa/sutta/mn/mn20_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn20_translation-it-giovannizappa.json
@@ -44,5 +44,6 @@
   "mn20:6.16": "Allora si siede.",
   "mn20:6.17": "Poi pensa:",
   "mn20:6.18": "‘Perché sono seduto?",
-  "mn20:6.19": "Perché non mi sdraio?’"
+  "mn20:6.19": "Perché non mi sdraio?’",
+  "mn20:6.20": "Allora si sdraia."
 }
