--- a/translation/it/giovannizappa/sutta/mn/mn20_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn20_translation-it-giovannizappa.json
@@ -47,5 +47,6 @@
   "mn20:6.19": "Perché non mi sdraio?’",
   "mn20:6.20": "Allora si sdraia.",
   "mn20:6.21": "E quindi quella persona scarterebbe posture sempre più grossolane e adotterebbe posture più raffinate.",
-  "mn20:6.22": "Allo stesso modo, un mendicante … quei pensieri cattivi vengono abbandonati e finiscono …"
+  "mn20:6.22": "Allo stesso modo, un mendicante … quei pensieri cattivi vengono abbandonati e finiscono …",
+  "mn20:7.1": "Ora, prendete un mendicante che si sta concentrando a calmare la formazione di quei pensieri, ma pensieri cattivi e malsani legati a desiderio, odio, e illusione continuano a venire a galla."
 }
