--- a/translation/it/giovannizappa/sutta/mn/mn20_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn20_translation-it-giovannizappa.json
@@ -50,5 +50,6 @@
   "mn20:6.22": "Allo stesso modo, un mendicante … quei pensieri cattivi vengono abbandonati e finiscono …",
   "mn20:7.1": "Ora, prendete un mendicante che si sta concentrando a calmare la formazione di quei pensieri, ma pensieri cattivi e malsani legati a desiderio, odio, e illusione continuano a venire a galla.",
   "mn20:7.2": "Stringendo i denti e premendo la lingua contro il palato, deve spremere, schiacciare, e torturare la mente con la mente.",
-  "mn20:7.3": "Nel fare ciò, quei pensieri cattivi vengono abbandonati e finiscono."
+  "mn20:7.3": "Nel fare ciò, quei pensieri cattivi vengono abbandonati e finiscono.",
+  "mn20:7.4": "La propria mente si calma internamente; si stabilisce, si unifica, e si raccoglie."
 }
