--- a/translation/it/giovannizappa/sutta/mn/mn20_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn20_translation-it-giovannizappa.json
@@ -53,5 +53,6 @@
   "mn20:7.3": "Nel fare ciò, quei pensieri cattivi vengono abbandonati e finiscono.",
   "mn20:7.4": "La propria mente si calma internamente; si stabilisce, si unifica, e si raccoglie.",
   "mn20:7.5": "È come un uomo forte che afferra un uomo debole per la testa o per i collo o per la spalla e lo spreme, lo schiaccia, e lo tortura.",
-  "mn20:7.6": "Allo stesso modo, un mendicante …"
+  "mn20:7.6": "Allo stesso modo, un mendicante …",
+  "mn20:7.7": "Stringendo i denti e premendo la lingua contro il palato, deve spremere, schiacciare, e torturare la mente con la mente."
 }
