--- a/translation/it/giovannizappa/sutta/mn/mn20_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn20_translation-it-giovannizappa.json
@@ -61,5 +61,6 @@
   "mn20:8.3": "Esamina gli svantaggi in quei pensieri …",
   "mn20:8.5": "Prova a ignorare e a dimenticarsi di quei pensieri …",
   "mn20:8.7": "Si concentra a calmare la formazione di quei pensieri …",
-  "mn20:8.9": "Stringendo i denti e premendo la lingua contro il palato, spreme, schiaccia, e tortura la mente con la mente. Nel riuscire a fare ognuna di queste cose, quei pensieri cattivi vengono abbandonati e finiscono."
+  "mn20:8.9": "Stringendo i denti e premendo la lingua contro il palato, spreme, schiaccia, e tortura la mente con la mente. Nel riuscire a fare ognuna di queste cose, quei pensieri cattivi vengono abbandonati e finiscono.",
+  "mn20:8.10": "La propria mente si calma internamente; si stabilisce, si unifica, e si raccoglie."
 }
