--- a/translation/de/sabbamitta/sutta/sn/sn56/sn56.53_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn56/sn56.53_translation-de-sabbamitta.json
@@ -5,5 +5,5 @@
   "sn56.53:1.1": "„Mönche und Nonnen, es gibt Stellen, wo die großen Ströme, Ganges, Yamuna, Aciravatī, Sarabhū und Mahī, zusammenkommen und zusammenfließen. ",
   "sn56.53:1.2": "Angenommen, jemand würde zwei oder drei Tropfen Wasser von einer solchen Stelle entnehmen. ",
   "sn56.53:1.3": "Was meint ihr, Mönche und Nonnen? ",
-  "sn56.53:1.4": "Was ist mehr: die zwei oder drei Wassertropfen oder das Wasser dieses Zusammenflusses?“ "
+  "sn56.53:1.4": "Was ist mehr: die zwei oder drei Wassertropfen, die entnommen wurden, oder das Wasser dieses Zusammenflusses?“ "
 }
