--- a/translation/de/sabbamitta/sutta/sn/sn56/sn56.53_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn56/sn56.53_translation-de-sabbamitta.json
@@ -6,5 +6,6 @@
   "sn56.53:1.2": "Angenommen, jemand würde zwei oder drei Tropfen Wasser von einer solchen Stelle entnehmen. ",
   "sn56.53:1.3": "Was meint ihr, Mönche und Nonnen? ",
   "sn56.53:1.4": "Was ist mehr: die zwei oder drei Tropfen, die entnommen wurden, oder das Wasser dieses Zusammenflusses?“ ",
-  "sn56.53:1.5": "„Herr, das Wasser dieses Zusammenflusses ist sicherlich mehr. Die zwei oder drei Tropfen, die entnommen wurden, sind winzig. "
+  "sn56.53:1.5": "„Herr, das Wasser dieses Zusammenflusses ist sicherlich mehr. Die zwei oder drei Tropfen, die entnommen wurden, sind winzig. ",
+  "sn56.53:1.6": "Verglichen mit dem Wasser des Zusammenflusses zählen sie nicht, da ist kein Vergleich, sie sind nicht einen Bruchteil wert.“ "
 }
