--- a/translation/de/sabbamitta/sutta/sn/sn56/sn56.53_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn56/sn56.53_translation-de-sabbamitta.json
@@ -8,5 +8,6 @@
   "sn56.53:1.4": "Was ist mehr: die zwei oder drei Tropfen, die entnommen wurden, oder das Wasser dieses Zusammenflusses?“ ",
   "sn56.53:1.5": "„Herr, das Wasser dieses Zusammenflusses ist sicherlich mehr. Die zwei oder drei Tropfen, die entnommen wurden, sind winzig. ",
   "sn56.53:1.6": "Verglichen mit dem Wasser des Zusammenflusses zählen sie nicht, da ist kein Vergleich, sie sind nicht einen Bruchteil wert.“ ",
-  "sn56.53:1.7": "„Ebenso ist für einen edlen Schüler … "
+  "sn56.53:1.7": "„Ebenso ist für einen edlen Schüler … ",
+  "sn56.53:1.8": "Aus diesem Grund solltet ihr Meditation üben …“ "
 }
