--- a/translation/de/sabbamitta/sutta/sn/sn56/sn56.54_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn56/sn56.54_translation-de-sabbamitta.json
@@ -3,5 +3,6 @@
   "sn56.54:0.2": "6. Über das Erfassen ",
   "sn56.54:0.3": "54. Wo Wassermassen zusammenfließen (2) ",
   "sn56.54:1.1": "„Mönche und Nonnen, es gibt Stellen, wo die großen Ströme, Ganges, Yamuna, Aciravatī, Sarabhū und Mahī, zusammenkommen und zusammenfließen. ",
-  "sn56.54:1.2": "Angenommen, dieses Wasser würde bis auf zwei oder drei Tropfen austrocknen und verdunsten. "
+  "sn56.54:1.2": "Angenommen, dieses Wasser würde bis auf zwei oder drei Tropfen austrocknen und verdunsten. ",
+  "sn56.54:1.3": "Was meint ihr, Mönche und Nonnen? "
 }
